<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Quizz</string>
    <string name="hello_world">Hello world!</string>
    <string name="labelHard">Hard questions:</string>
    <string name="buttonAnswer">Answer</string>
    <string name="labelDifficulty">Hard:</string>
    <string name="labelNbDisplays">Display:</string>
    <string name="buttonPrevious">&lt;&lt;</string>
    <string name="buttonNext">&gt;&gt;</string>
    <string name="emptyString"/>
    <string name="zeroString">0</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="q1">1+1</string>
    <string name="r1">2</string>
    <string name="q2">7*2</string>
    <string name="r2">14</string>
    <string name="q3">47 est-il premier</string>
    <string name="r3">oui</string>
    <string name="q4">Captain Haddock\'s fisrt name</string>
    <string name="r4">Archibald</string>

</resources>
